# chat-app

./: README.md
backend/: app.py  app_copy.py  pyproject.toml
backend/files/: 20250506-email.txt  docs_n8n (1).pdf:Zone.Identifier  docs_n8n.pdf:Zone.Identifier
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  vite.config.js
